Basic project structure commit